:fix: 결제 응답에서 member 객체 구조 잘못 해석한 부분 수정